# serde_fs

./: .gitignore  CONTRIBUTING.md  CONTRIBUTORS  Cargo.toml  PULL_REQUEST_TEMPLATE.md  README.md
.sit/cli/: mr-send-upstream
.sit/issues/615336ae-b0f4-4e67-b5c3-371e19f0c6ce/6YVTPGBDDKGTLJIJWOUKMUXXZCDSNF2R/: .timestamp  text
.sit/issues/615336ae-b0f4-4e67-b5c3-371e19f0c6ce/NLWTANFNQA7FSXQAZAV32RG2O66QPMXH/: record
.sit/issues/6af5a3dd-6e67-4ad2-81ac-116fcbfb1feb/NPEXHIMNZRPH4R3TONLX6JFKJRI2P2XK/: .signature  .timestamp  text
.sit/issues/e8310019-9017-4ce8-9397-800ca44300ce/ECJ3WM3RTY2FAONUDMKUJKPWBL26UAEQ/: .signature  .timestamp  text
.sit/issues/e8310019-9017-4ce8-9397-800ca44300ce/KPLXRXITJXQB7VGTYCA3WIGIMYMYISTP/: .signature
.sit/issues/ef1ed75d-7a7e-4967-bb0b-e46d65991c84/BNHCJIZGMMQOPTXMUJDYHACYXRR3UMP6/: .signature  .timestamp  text
.sit/issues/ef1ed75d-7a7e-4967-bb0b-e46d65991c84/PTQOJS3ZY6X5QQ7OXJXKCCVJTT2ZXD7E/: .timestamp
.sit/items/615336ae-b0f4-4e67-b5c3-371e19f0c6ce/6KG6GESPH6OZYEAVHIPA2YP45LKCPPYB/: .signature  .timestamp  text
.sit/items/615336ae-b0f4-4e67-b5c3-371e19f0c6ce/6YVTPGBDDKGTLJIJWOUKMUXXZCDSNF2R/: .signature
.sit/items/615336ae-b0f4-4e67-b5c3-371e19f0c6ce/NLWTANFNQA7FSXQAZAV32RG2O66QPMXH/: .signature  .timestamp
.sit/items/6af5a3dd-6e67-4ad2-81ac-116fcbfb1feb/DY4FY7JTXLJBX7MIETEORVG4EVYUGHUI/: .signature  text
.sit/items/9b3e88cb-7c2b-479f-8285-317eedf2130e/GTIH4BWBVNQZP5U3TV7OM3GKCQ645TKU/: .signature  .timestamp  (+1 more)
examples/: config.rs
scripts/: apply-merge-request  prepare-merge-request
src/: de.rs  lib.rs  ser.rs
(+14 files in other folders)
